# uninum

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  cookbook.md  eml_explained.md
examples/: 01_expressions.py  02_differentiation.py  03_simplification.py  04_compilation.py  05_eml_lowering.py  06_full_workflow.py
tests/: test_compile.py  test_diff.py  test_eml.py  test_expr.py  test_latex.py  test_simplify.py
uninum/: __init__.py  compile.py  diff.py  eml.py  expr.py  latex.py  simplify.py
uninum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
