[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uninum"
version = "0.2.0"
description = "Unified symbolic-numeric expression runtime with EML lowering"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Andrew Brumbelow" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/Brumbelow/uninum"
Repository = "https://github.com/Brumbelow/uninum"
Issues = "https://github.com/Brumbelow/uninum/issues"

[project.optional-dependencies]
numpy = ["numpy"]
dev = ["pytest"]
